<resources>
    <string name="app_name">Canvas</string>

    <string name="parse_application_id">@string/parse_id</string>
    <string name="parse_client_key">@string/parse_key</string>
    <string name="facebook_app_id">@string/facebook_id</string>
    <string name="twitter_consumer_key">@string/twitter_key</string>
    <string name="twitter_consumer_secret">@string/twitter_secret</string>

    <string name="toast_fragment_text_chosen">Drag then press "Drop" when finished</string>
    <string name="toast_fragment_text_empty">Input some text to be drawn!</string>
    <string name="fragment_text_title">Enter Text</string>
    <string name="fragment_text_input_hint">Will Be Drawn On Canvas</string>

    <string name="fragment_color_picker_choose">Choose</string>
    <string name="fragment_color_picker_nah">Cancel</string>
    <string name="fragment_color_picker_title">Choose Color</string>

    <string name="snackbar_activity_home_image_saved_title">Saved Your Masterpiece!</string>
    <string name="snackbar_activity_home_imaged_saved_body">View</string>
    <string name="snackbar_no_more_redo">Nothing more to redo!</string>
    <string name="snackbar_no_more_undo">Nothing more to undo!</string>
    <string name="snackbar_no_internet">Get yo internet up</string>
    <string name="snackbar_no_camera">Phone ain\'t got no camera bih</string>

    <string name="toast_fragment_filename_invalid">Must contain only alphanumeric characters</string>
    <string name="fragment_filename_empty">Put in a name to save!</string>
    <string name="fragment_filename_title">Upload Masterpiece</string>
    <string name="fragment_filename_edittext_hint">Enter name</string>
    <string name="fragment_filename_pos_button_text">Save!</string>
    <string name="fragment_filename_neg_button_text">No thanks</string>

    <string name="fragment_brush_picker_title">Brush Style</string>
    <string name="fragment_brush_picker_pos_button_text">Set!</string>

    <string-array name="paint_examples">
        <item>normal</item>
        <item>dots</item>
        <item>emboss</item>
        <item>deboss</item>
        <item>normalShadow</item>
        <item>innerShadow</item>
        <item>outerShadow</item>
        <item>solidShadow</item>
    </string-array>

    <string name="error_dialog_pos_button_text">Got it</string>
    <string name="error_dialog_neg_button_text">Aight</string>
    <string name="error_dialog_general_title">Something went wrong</string>
    <string name="error_dialog_general_body">Don\'t look at me. It\'s not my fault.</string>

    <string name="error_no_internet_title">The Internet Ran Away</string>
    <string name="error_no_internet_body">Looks like you don\'t have an internet connection.
        Try enabling data, or reconnect to some sweet WiFi..</string>

    <string name="error_object_not_found_title">Where It At Tho?</string>
    <string name="error_object_not_found_body">Looks like the thing you want doesn\'t
        exist. Fuck if I know what happened to it. </string>

    <string name="error_dialog_no_camera_title">No Camera :(</string>
    <string name="error_dialog_no_camera_body">Looks like your device doesn\'t have a camera to take
        pictures with. This feature requires that you have a hardware camera</string>

    <string name="alert_dialog_new_canvas_title">Clear Canvas?</string>
    <string name="alert_dialog_new_canvas_body">Pressing \"Got it\" deletes any drawing
        you currently have.</string>
    <string name="alert_dialog_new_canvas_pos_button">Bet</string>
    <string name="alert_dialog_new_canvas_neg_button">Oh NO!</string>

    <string name="alert_dialog_exit">Exit</string>
    <string name="alert_dialog_save_exit">Save And Exit</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="dialog_save_drawing">Save Drawing</string>
    <string name="dialog_exit_canvas">Exit Canvas</string>
    
    <string name="dialog_from_gallery">Picture From Gallery</string>
    <string name="dialog_from_camera">Take a Picture</string>

    <string name="alert_dialog_saving_in_progress">Saving...</string>

    <string name="view_options_menu_cancel">Cancel</string>
    <string name="view_options_menu_accept">Done</string>
    <string name="view_options_menu_edit_text">Text</string>
    <string name="view_options_menu_edit_color">Color</string>
    <string name="view_options_menu_edit_import">Import</string>
    <string name="view_options_menu_edit_camera">Camera</string>

    <string name="lorem">Lorem ipsum dolor sit amet, non purus in mollis ut ligula egestas, ullam nulla elementum id eget id amet, dui ipsum, magna lacus ipsum. Vestibulum pulvinar duis lorem, nulla dis ut sed, torquent platea lorem metus hendrerit volutpat. Aliquet odio diam vel eget sit vivamus, aliquam sit a ut suspendisse, sit nisl ac in sodales augue mauris. Urna cursus sed ullamcorper amet lectus est, ridiculus est, magna nunc ullamcorper, torquent pellentesque, consectetuer nisl. Ut elementum a mauris rhoncus cras, ullamcorper nunc velit est aenean condimentum laudantium. Lorem fringilla neque vestibulum dis etiam posuere. Sit justo morbi phasellus sodales mollis pharetra, elit consectetuer in nunc ultricies vestibulum pellentesque. Dictum commodo turpis luctus curabitur enim, quam nullam id sapien mauris nec. Non phasellus odio nulla faucibus accumsan gravida, sem eget pellentesque taciti phasellus luctus.
Et fringilla eum ullamcorper turpis in nunc, duis elementum condimentum eu nullam, tristique vitae aliquam ante vestibulum aliquam nisl, integer ornare congue posuere orci. Eros eget blandit quis sem, et tempus turpis lorem aliquam malesuada consectetuer, porro tortor, suspendisse elit vel nec sit nulla, conubia eget dapibus vel bibendum. Pede id volutpat a, turpis duis condimentum lorem sodales semper. Orci nulla vel aliquam porta pellentesque, blandit libero non, duis ac accumsan nec ac, ut maecenas tortor, risus erat. Amet integer nulla aliquam inceptos commodo gravida, libero taciti nisl ipsum dictum, tellus turpis urna ante sagittis.
Magna amet aliquet lacus nibh posuere in, voluptatem lacus justo non aliquam cum ut. In lorem pede, et nunc tortor duis, accumsan posuere eros. Sed mauris pellentesque sed et nulla ut. Erat praesent vitae vestibulum, vestibulum id, aptent amet, eu dignissim nec at erat convallis praesent, auctor proin amet elit ultricies. Velit amet, in lectus, ipsum nisl elit lacinia tristique massa eros, laoreet wisi nulla faucibus turpis, donec blandit hac curabitur.
Aliquam non faucibus, diam mauris bibendum vulputate, ut erat, curabitur nulla lorem orci fringilla, orci mus lectus volutpat arcu consequat. Fermentum vel, volutpat semper, aliquet sed arcu hendrerit, auctor dignissim sed diam elit. Facilisi pellentesque malesuada pulvinar metus, mauris pellentesque consequat ut fusce, tincidunt est vehicula arcu integer diam, sagittis magnis etiam vestibulum eu elit. Consequat pede turpis aspernatur porttitor, etiam vel nam in. Enim malesuada magna sunt blandit wisi, gravida elit laoreet. Donec duis diam aliquam, sem posuere.</string>

</resources>
