<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_filename_root" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/fragment_filename_input"
            android:gravity="center"
            android:layout_gravity="center"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_filename_edittext_hint"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/fragment_filename_pos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_text_input_layout"
        android:text="@string/fragment_filename_pos_button_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/fragment_filename_neg_button"
        android:layout_width="wrap_content"
        android:layout_below="@id/username_text_input_layout"
        android:layout_height="wrap_content"
        android:text="@string/fragment_filename_neg_button_text"
        android:layout_alignBottom="@id/fragment_filename_pos_button"
        android:layout_alignBaseline="@id/fragment_filename_pos_button"
        android:layout_toStartOf="@id/fragment_filename_pos_button"
        android:layout_toLeftOf="@id/fragment_filename_pos_button"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/fragment_filename_lazy_button"
        android:layout_width="wrap_content"
        android:layout_below="@id/username_text_input_layout"
        android:layout_height="wrap_content"
        android:text="@string/fragment_filename_lazy_button_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        style="?android:attr/borderlessButtonStyle" />

</RelativeLayout>